--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.heroui-table tr:nth-child(odd) td,.heroui-table table tr:hover>td {
+    background-color: transparent !important;
+}
