--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    @apply text-gray-800;
+  }
+}
+
 .heroui-table tr:nth-child(odd) td,.heroui-table table tr:hover>td {
     background-color: transparent !important;
 }
